<resources>
    <string name="app_name">Connect 4</string>

    //activity_main
    <string name="config">Configuració</string>
    <string name="btn_help">Ajuda</string>
    <string name="btn_init">Iniciar partida</string>
    <string name="btn_exit">Sortir</string>
    <string name="btn_database">Base dades</string>

    //activity_help
    <string name="help_activity_title">Ajuda</string>
    <string name="description">Connect 4 és un joc de taula que consisteix en anar introduint fitxes en un tauler vertical amb l\'objectiu d\'alinear 4 consecutives del color assignat al jugador(VERMELL) abans que l\'oponent (GROC).
        \n \n A cada torn, el jugador introdueix una fitxa a la columna triada(sempre i quan no estigui plena), i aquesta cau a la fila més baixa possible.
        \n \n Guanya la partida el jugador que primer aconsegueix alinear 4 fitxes consecutives del seu color en horitzontal, vertical o diagonal.
        \n \n Si totes les columnes estan plenes i ningu ha aconseguit alinear-ne 4 fitxes o s\'agota el temps (en cas de elegir control de temps), hi ha empat.</string>
    <string name="btn_back">Tornar</string>

    //activity_config
    <string name="config_activity_title">Configuració</string>
    <string name="btn_start">Començar</string>
    <string name="two_players">Dos jugadors</string>
    <string name="alias">Alias: </string>
    <string name="size">Mida del tauler: </string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="time_control">Control de temps: </string>
    <string name="toast_message">Si us plau, especifiqui un alias</string>

    //activity_game
    <string name="turn">Torn: </string>
    <string name="time_game">Temps: </string>
    <string name="cells">Caselles restants: </string>
    <string name="victory_result">Victoria</string>
    <string name="defeat_result">Derrota</string>
    <string name="draw_result">Empat</string>
    <string name="seconds">seg.</string>
    <string name="log">Log del joc: </string>


    //activity_result
    <string name="ResultsTitle">Resultats</string>
    <string name="date">Data i Hora</string>
    <string name="resume">Valors del Log</string>
    <string name="email">E-Mail a enviar resultats</string>
    <string name="email_error">Si us plau, especifiqui un correu electrònic</string>
    <string name="cellsToFinish">Caselles per acabar: </string>
    <string name="sendResult">Enviar resultat</string>
    <string name="timeDisabled">Control temps: NO</string>
    <string name="timeActived">Control temps: SÍ</string>

    //activity_database
    <string name="DataBaseTitle">Base de dades</string>

    //activity_detail
    <string name="DetailTitle">Detalls partida</string>
    <string name="detail_alias">Alias</string>
    <string name="detail_date">Data i hora</string>
    <string name="detail_size">Mida tauler</string>
    <string name="detail_control">Control de temps</string>
    <string name="detail_result">Resultat</string>

    //Toast
    <string name="invalid_cell">Casella incorrecta</string>
    <string name="win">Heu guanyat!!</string>
    <string name="player2_win">Ha guanyat Player2!!</string>
    <string name="lose">Heu perdut.</string>
    <string name="draw_cells">Heu empatat, Tauler ple.</string>
    <string name="draw_time">Heu empatat, Temps superat.</string>
    <string name="draw">Heu empatat.</string>

    //Preferencies
    <string name="preferences">Preferències</string>
    <string name="main">Tornar inici</string>
    <string name="userTitle">Nom d\'usuari</string>
    <string name="userSummary">Nom de l\'usuari</string>
    <string name="user_default">Usuari1</string>
    <string name="boardTitle">Mida tauler</string>
    <string name="boardSummary">Mida del tauler del joc</string>
    <string name="timeTitle">Control de temps</string>
    <string name="timeSummary">Marcar per a limitar el temps de la partida</string>
    <string name="selectTimeTitle">Temps de joc</string>
    <string name="selectTimeSummary">Marcar el temps que vols com a limit</string>
    <string name="multiplayerTitle">Multijugador</string>
    <string name="multiplayerSummary">Marcar si vols jugar en mode multijujador</string>
    <string name="titleDialog">Introdueix valor</string>

    //Keys
    <string name="user_key">user</string>
    <string name="multiplayer_key">multiplayer</string>
    <string name="board_key">board</string>
    <string name="board_Default_key">7</string>
    <string name="time_key">time</string>
    <string name="selectTime_key">select_time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
