<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800066FF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_activity_title"
            android:textSize="25dp"
            android:textStyle="bold">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/description"
                android:textSize="20dp"/>

            <Space
                android:id="@+id/spacer1"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@id/description_text"></Space>


            <ImageView
                android:id="@+id/image"
                android:layout_below="@id/spacer1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/connect_4_png_13"></ImageView>

            <Space
                android:id="@+id/spacer2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/image"></Space>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableLeft="?attr/homeAsUpIndicator"
        android:drawableTint="@android:color/black"
        android:text="@string/btn_back"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>