<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    android:background="#B33A70CC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/connect4_main" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60dp"
            android:textStyle="bold"
            android:text="@string/btn_help"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/spacer1"
            android:background="#CC292929"
            android:textColor="#FFF"/>

        <Space
            android:id="@+id/spacer1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_above="@id/btnInit"></Space>

        <Button
            android:id="@+id/btnInit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_init"
            android:textSize="60dp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:layout_centerInParent="true"
            android:background="#CC13BA00"/>

        <Space
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/btnInit"></Space>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_exit"
            android:textSize="60dp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spacer2"
            android:background="#CCF30000"/>

    </RelativeLayout>



</LinearLayout>