<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GameActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/game_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingHorizontal="5dp"
                android:textColor="@color/colorRedLight"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_game"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timing"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cells"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cells_left"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:textColor="@color/colorRedLight"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="54"
        android:padding="5dp">

        <GridView
            android:id="@+id/board"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:horizontalSpacing="0dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            />
    </LinearLayout>

</LinearLayout>